test/snapshots/config-error-unknown-module.txt
-- MODULE NOT FOUND ------------------------------------------------------------

A module is missing in your configuration. Maybe you forgot to add some
dependencies that contain the rules you wished to enable? If so, run elm install
with the package name from inside
<local-path>/test/config-error-unknown-module.

-- MODULE NOT FOUND - <local-path>/test/config-error-unknown-module/src/ReviewConfig.elm

You are trying to import a `Unknown.Module` module:

15| import Unknown.Module
           ^^^^^^^^^^^^^^
I checked the "dependencies" and "source-directories" listed in your elm.json,
but I cannot find it! Maybe it is a typo for one of these names?

    Elm.Module
    Elm.Syntax.Module
    Json.Encode
    Json.Decode

Hint: If it is not a typo, check the "dependencies" and "source-directories" of
your elm.json to make sure all the packages you need are listed there!

